--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 
     <modules>
         <module>chapter_001</module>
+        <module>chapter_002</module>
+        <module>chapter_003</module>
+        <module>chapter_004</module>
     </modules>
 	
 	
